use Stream::toList